# final_proj

./: CMakeLists.txt  EfortKine.cpp  EfortKine.h  README.md  ctl_test2.cpp  efort_control.cpp  efort_control.h  get_6Tt.cpp  get_DH_calibration.cpp  joint_6dof.cxx  joint_6dof.h  joint_6dof.idl  joint_6dofPubSubMain.cxx  joint_6dofPubSubTypes.cxx  joint_6dofPubSubTypes.h  joint_6dofPublisher.cxx  joint_6dofPublisher.h  joint_6dofSubscriber.cxx  joint_6dofSubscriber.h  temp.txt  three_robos_coordinate.cpp  two_robos_coordinate_move.cpp
txt/: ACTUALrobot1_DH_joint_series.txt  ACTUALrobot2_DH_joint_series.txt  robot1_get_6Tt.txt  robot2_get_6Tt.txt
